--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia, quis?</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
 </body>
 </html>
