--- a/task.html
+++ b/task.html
@@ -3,62 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>My Landing Page</title>
     <link rel="stylesheet" href="task.css">
 </head>
 <body>
     <header>
-<nav>
-        <div class="logo">JAGAN</div>
-        <div class="content">
-        <ul>
-            <li><a href="#"></a>Home  </li>
-            <li><a href="#"></a>About  </li>
-            <li><a href="#"></a>Contact us  </li>
-            <li><a href="#"></a>Works  </li>
-        </ul>
-        </div>
-    </nav>
+        <nav>
+            <h1>BrandName</h1>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <div class="hero">
-        <div class="place-1">
-            <h1 id="head">Full stack ui/ux developer</h1>
-            <div id="para1">
-                im a A full stack developer is a software engineer
-                 who can work on both the front-end (what a user sees 
-                 and interacts with) and the back-end (the server, 
-                 database, and application logic) of a website or
-                  application. 
+
+    <section class="hero" id="home">
+        <div class="hero-content">
+            <h2>Welcome to Our Landing Page</h2>
+            <p>Beautiful designs made simple with only HTML and CSS.</p>
+            <a href="#features" class="btn">Explore Features</a>
+        </div>
+    </section>
+
+    <section class="features" id="features">
+        <h2>Features</h2>
+        <div class="feature-cards">
+            <div class="card">
+                <h3>Responsive Design</h3>
+                <p>Looks great on any device, from desktop to mobile.</p>
             </div>
-            <div id="para2">
-                UI/UX developer is a professional who designs
-                 and builds the user-facing part of a digital
-                  product, ensuring it is both visually appealing
-                   and easy to use
+            <div class="card">
+                <h3>Easy to Customize</h3>
+                <p>Fully customizable with just HTML and CSS.</p>
             </div>
-                    <div class="button">
-        <div class="button-1 bt">Contact us</div>
-        <div class="button-2 bt">My works</div>
+            <div class="card">
+                <h3>Fast Loading</h3>
+                <p>Minimal code ensures blazing fast load times.</p>
+            </div>
         </div>
-        </div>
-        <div class="place-2">
-            <img src="jagan.jpg">
-        </div>
-    </div>
-        <h1 class="jaga">WORKS</h1>
-<div class="works">
-    <div class="front">Front-end
-    <div class="work area-1">HTML</div>
-    <div class="work area-2">CSS</div>
-    <div class="work area-3">JAVASCRIPT</div>
-    <div class="work area-4">REACT</div>
-    </div>
-    <div class="Back">Back-end
-    <div class="work area-1">Java</div>
-    <div class="work area-2">Python</div>
-    <div class="work area-3">C</div>
-    <div class="work area-4">C#</div>
-    </div>
-</div>
+    </section>
+
+    <footer id="contact">
+        <p>&copy; 2025 BrandName. All rights reserved.</p>
+    </footer>
 </body>
 </html>
